--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ numpy
 optuna~=3.2.0
 fairscale~=0.4.13
 deepspeed~=0.9.4
+rdkit~=2023.3.1
+tensorboard~=2.13.0
+git+https://github.com/MolecularAI/pysmilesutils.git
